# PKGBUILDs

./: .gitignore  ALARM-changelog  CONTRIBUTING.md  README  README.md  makepkg.conf  packages-to-skip.txt
alarm/alsa-ucm-nyan/: 90-alsa-ucm-nyan.rules  HDA-Tegra.conf  HDA-Tegra.hifi  PKGBUILD  Venice2.conf  Venice2.hifi
alarm/aml-libs-c1/: 99-amlogic.rules  PKGBUILD
alarm/aml-libs-c2/: 99-amlogic.rules  PKGBUILD
alarm/amzn-ena-aarch64-dkms/: PKGBUILD  amzn-drivers.install  dkms.conf
alarm/android-tools-fsutils/: Makefile  PKGBUILD
alarm/at91bootstrap-arietta/: 0001-arietta-dtb-name-fix.patch  0002-fix-for-gcc-5.patch  PKGBUILD
alarm/babeld/: PKGBUILD
alarm/batctl/: PKGBUILD
alarm/brcm-patchram-plus/: 0001-fix-includes.patch  PKGBUILD
alarm/cbootimage/: PKGBUILD
alarm/cbootimage-trimslice/: PKGBUILD
alarm/cgpt/: PKGBUILD  vboot-utils-00-disable-static-linking.patch
alarm/chromium-pepper-flash/: PKGBUILD  chromium-pepper-flash.install
alarm/cpufrequtils/: PKGBUILD
alarm/cryptodev-dkms/: PKGBUILD  cryptodev-dkms.install  dkms.conf  pageaccess_fix_for_4.6+.patch  support_skcipher_and_ablkcipher.patch
alarm/devmem/: PKGBUILD
alarm/devtools-alarm/: 0001-makechrootpkg-cache-dir.patch  0002-arch-nspawn-keep-mirrorlist.patch  0002-mkarchroot-dont-change-confs.patch  0003-makechrootpkg-distcc.patch  0004-arch-nspawn-arm-fix.patch  0005-makechrootpkg-no-default-logging.patch  0006-archbuild-no-setarch.patch  0007-arch-nspawn-keep-stderr.patch  0007-makechrootpkg-don-t-delete-MAKEFLAGS-and-PACKAGER.patch  0008-fix-namcap-running-by-default.patch  0008-makechrootpkg-Fix-unconditionally-running-namcap.patch  0008-makechrootpkg-gotmpdir.patch  0009-Makefile-arm-helpers.patch  0009-arm-helpers.patch  0009-makechrootpkg-fix-verifysource-with-pacman-git.patch  0010-makepkg-aarch64-conf.patch  0010-remove-deprecated-d-option.patch  0011-makepkg-armv7h-conf.patch  PKGBUILD  add-etc-shadow-entry-for-builduser.patch
alarm/distcc-clang/: PKGBUILD
alarm/dkms-8188eu/: PKGBUILD
alarm/dkms-8192cu/: D-link.patch  HWNUM-300V2.patch  ISY.patch  N150MA.patch  NoDebug.patch  PKGBUILD  RTL8192CU-kernel-4.0.patch  RTL8192CU-kernel-4.6.patch  add_missing_ids_netgear_dlink.patch  blacklist-dkms-8192cu.conf  dkms-8192cu.install  dkms.conf  fix_310_proc.patch
alarm/dkms-8812au/: PKGBUILD  dkms.conf  rtl8812au.conf
alarm/dkms-mali-panfrost-rk/: PKGBUILD  dkms-mali-panfrost-rk.install  dkms.conf
alarm/dkms-mali-utgard-meson/: PKGBUILD  dkms-mali-utgard-meson.install  dkms.conf
alarm/dkms-mt7601/: PKGBUILD  dkms-mt7601.install  dkms.conf
alarm/dkms-mt7610/: PKGBUILD  dkms-mt7610.install  dkms.conf
alarm/dtc-overlay/: 0001-dtc-Symbol-and-local-fixup-generation-support.patch  0002-dtc-Plugin-object-device-tree-support.patch  0003-dtc-Document-the-dynamic-plugin-internals.patch  PKGBUILD  dtc-dynamic-symbols-fixup-support.patch
alarm/dtc145/: PKGBUILD
alarm/ec-utils/: PKGBUILD
alarm/edk2-raspberrypi/: 60-edk2-rpi3.json  60-edk2-rpi4.json  70-sync-edk2-rpi3.hook  70-sync-edk2-rpi4.hook  80-remove-edk2-rpi3.hook  80-remove-edk2-rpi4.hook  PKGBUILD  edk2-rpi3  edk2-rpi4
alarm/elftosb/: PKGBUILD
alarm/exynos5-hwcomposer/: PKGBUILD  exynos5-hwcomposer.service
alarm/fake-hwclock/: PKGBUILD  fake-hwclock-save.service  fake-hwclock-save.timer  fake-hwclock.install  fake-hwclock.service  fake-hwclock.sh
alarm/ffmpeg-rpi/: 0001-fix-glslang.patch  0002-ffmpeg-4.4.4n-rpi.patch  0002-ffmpeg-4.4n-rpi.patch  0003-ffmpeg-4.4n-rpi.patch  0004-fix_flags.patch  PKGBUILD
alarm/firmware-ap6210/: PKGBUILD
alarm/firmware-ap6611s/: PKGBUILD
alarm/firmware-beaglebone/: PKGBUILD
alarm/firmware-brcm43xx/: 80-brcm43xx-firmware.rules  PKGBUILD  bcm43xx  brcm43xx-firmware-update  brcm43xx-firmware.service  brcm43xx-firmware@.service  brcm43xx.service  start-brcm-patchram-plus
alarm/firmware-dragonboard/: PKGBUILD
alarm/firmware-dragonboard410c/: PKGBUILD
alarm/firmware-gru/: HiFi.conf  PKGBUILD  rk3399-gru-sound.conf
alarm/firmware-hobbitboard/: PKGBUILD
alarm/firmware-imx/: PKGBUILD
alarm/firmware-oak/: PKGBUILD
alarm/firmware-peach/: PKGBUILD
alarm/firmware-raspberrypi/: PKGBUILD  (+1 more)
androidphones/: README
community/supercollider/src/SuperCollider-Source/external_libraries/nova-tt/: CMakeLists.txt  Doxyfile  README  nova-tt.kdev4
community/supercollider/src/SuperCollider-Source/external_libraries/nova-tt/nova-tt/: branch_hints.hpp  dummy_mutex.hpp  mlock.hpp  name_thread.hpp  nanosleep.hpp  pause.hpp  rw_mutex.hpp  rw_spinlock.hpp  semaphore.hpp  semaphore_boost_fallback.hpp  semaphore_mach.hpp  semaphore_posix.hpp  semaphore_pthreads.hpp  spin_lock.hpp  thread_affinity.hpp  thread_priority.hpp  thread_priority_fallback.hpp  thread_priority_mach.hpp  thread_priority_pthread.hpp
community/supercollider/src/SuperCollider-Source/external_libraries/nova-tt/testsuite/: CMakeLists.txt  mlock_test.cpp  nanosleep.cpp  nanosleep_test.cpp  rw_mutex_test.cpp  rw_spinlock_test.cpp  semaphore_test.cpp  spin_lock_test.cpp  thread_affinity_test.cpp  thread_priority_test.cpp
core/: README
extra/: PKGBUILD  README
extra/gmic/: .SRCINFO  .nvchecker.toml  CMakeLists.txt  PKGBUILD  REUSE.toml  opencv-5.patch
installer/: pogoplug-new.sh
os/: POST_INSTALL.txt  README
pogo-xce/: README  modules.order  xce.h  xce_dev.c  xce_thread.c  xce_user.h  xce_version.h
scripts/: aur-syncer  chroot-builder  distro-builder  dupechecker  find-oldest-pkgs.pl  install-nand.sh  install.sh  orphaned-pkgs-removal-tool.pl  papps_installer.sh  pkgverchecker  recursive-builder  rfs-pacman  tonidoplug-reflasher.sh
uboot/: 0002-Environment-at-0xa0000.patch  0004-Prompt-and-Ident-String.patch  0010-Definition-for-the-MAC-CHANGE-THIS.patch  0011-CONFIG_PREBOOT-kernel-and-netconsole-CHANGE.patch  0012-Boot-from-USB-and-netconsole.-CHANGE-THIS-T.patch  0013-Workaround-to-get-the-kernel-loaded.patch  README.plugapps  REAME.plugapps  build-uboot.sh  mkDockStar.sh
uboot-iconnect/: PKGBUILD  iconnect.patch
uboot-mtd3-jeffd/: README
uboot-tbs2910/: PKGBUILD  alarm.patch
util/: archmobile
(+17115 files in other folders)
